--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Redă MP3 din GitHub</h1>
-    <audio controls>
+    <audio controls autoplay>
         <source src="https://raw.githubusercontent.com/georgelush/beep/main/beep.mp3">
         Your browser does not support the audio element.
     </audio>
